src/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    MOVE
    PRIV
    OPEN_BRACKET
    IMPL
    ENUM
    UNSIZED
    ARROW
    WHERE
    OFFSETOF
    ALIGNOF
    TRAIT
    TYPEOF
    BOX
    RETURN
    STATIC
    FINAL
    STRING
    SELFTYPE
    SHEBANG_LINE
    VIRTUAL
    D_COLON
    CRATE
    CONTINUE
    PROC
    MOD
    EXTERN
    REF
    DOT
    SELFVALUE
    PUB
    BREAK
    TYPE
    CLOSE_BRACKET
    DO
    USE
    CONST
    ABSTRACT
    SIZEOF
    OVERRIDE
    BECOME
    MACRO
    YIELD
    AS
    PURE
    SUPER

Grammar

Rule 0     S' -> compilation_unit
Rule 1     compilation_unit -> ProgramFile
Rule 2     ProgramFile -> fun_def main_fun
Rule 3     ProgramFile -> main_fun
Rule 4     main_fun -> FN MAIN_FUN OPEN_PARANTHESIS CLOSE_PARANTHESIS BEGIN_BLOCK stmts END_BLOCK
Rule 5     fun_def -> FN ident OPEN_PARANTHESIS arguments CLOSE_PARANTHESIS BEGIN_BLOCK stmts END_BLOCK
Rule 6     fun_def -> FN ident OPEN_PARANTHESIS CLOSE_PARANTHESIS BEGIN_BLOCK stmts END_BLOCK
Rule 7     fun_def -> fun_def FN ident OPEN_PARANTHESIS arguments CLOSE_PARANTHESIS BEGIN_BLOCK stmts END_BLOCK
Rule 8     fun_def -> fun_def FN ident OPEN_PARANTHESIS CLOSE_PARANTHESIS BEGIN_BLOCK stmts END_BLOCK
Rule 9     stmts -> non_block_stmt
Rule 10    stmts -> non_block_stmt stmts
Rule 11    stmts -> block_stmt
Rule 12    stmts -> block_stmt stmts
Rule 13    non_block_stmt -> LET ident ASSIGNMENT_OP SENTENCE SEMICOLON
Rule 14    non_block_stmt -> LET ident ASSIGNMENT_OP LIT_INTEGER SEMICOLON
Rule 15    non_block_stmt -> LET ident ASSIGNMENT_OP LIT_FLOAT SEMICOLON
Rule 16    non_block_stmt -> LET ident ASSIGNMENT_OP MINUS LIT_INTEGER SEMICOLON
Rule 17    non_block_stmt -> LET ident ASSIGNMENT_OP TRUE SEMICOLON
Rule 18    non_block_stmt -> LET ident ASSIGNMENT_OP FALSE SEMICOLON
Rule 19    non_block_stmt -> LET MUT ident ASSIGNMENT_OP LIT_INTEGER SEMICOLON
Rule 20    non_block_stmt -> LET MUT ident ASSIGNMENT_OP LIT_FLOAT SEMICOLON
Rule 21    non_block_stmt -> LET MUT ident ASSIGNMENT_OP TRUE SEMICOLON
Rule 22    non_block_stmt -> LET MUT ident ASSIGNMENT_OP FALSE SEMICOLON
Rule 23    non_block_stmt -> PRINT OPEN_PARANTHESIS SENTENCE CLOSE_PARANTHESIS SEMICOLON
Rule 24    non_block_stmt -> binop
Rule 25    non_block_stmt -> bitop
Rule 26    non_block_stmt -> fn_call
Rule 27    non_block_stmt -> print_ident
Rule 28    print_ident -> PRINT ident SEMICOLON
Rule 29    binop -> ident ASSIGNMENT_OP expr SEMICOLON
Rule 30    expr -> ident
Rule 31    expr -> expr arith_op ident
Rule 32    arith_op -> PLUS
Rule 33    arith_op -> MINUS
Rule 34    arith_op -> MULTIPLICATION
Rule 35    arith_op -> DIVISION
Rule 36    arith_op -> MODULUS
Rule 37    bitop -> ident ASSIGNMENT_OP b_expr SEMICOLON
Rule 38    b_expr -> ident
Rule 39    b_expr -> b_expr bit_op ident
Rule 40    bit_op -> AND_LOGICAL
Rule 41    bit_op -> OR_LOGICAL
Rule 42    bit_op -> XOR_OP
Rule 43    bit_op -> NOT_OP
Rule 44    bit_op -> LEFT_SHIFT
Rule 45    bit_op -> RIGHT_SHIFT
Rule 46    fn_call -> ident OPEN_PARANTHESIS arguments CLOSE_PARANTHESIS SEMICOLON
Rule 47    fn_call -> ident OPEN_PARANTHESIS CLOSE_PARANTHESIS SEMICOLON
Rule 48    arguments -> ident
Rule 49    arguments -> ident COMMA arguments
Rule 50    block_stmt -> loop_block
Rule 51    block_stmt -> while_block
Rule 52    block_stmt -> for_block
Rule 53    block_stmt -> if_block
Rule 54    block_stmt -> if_else_block
Rule 55    block_stmt -> else_if_block
Rule 56    block_stmt -> unsafe_block
Rule 57    block_stmt -> match_block
Rule 58    block_stmt -> struct_block
Rule 59    loop_block -> LOOP BEGIN_BLOCK stmts END_BLOCK
Rule 60    while_block -> WHILE TRUE BEGIN_BLOCK stmts END_BLOCK
Rule 61    while_block -> WHILE FALSE BEGIN_BLOCK stmts END_BLOCK
Rule 62    while_block -> WHILE ident BEGIN_BLOCK stmts END_BLOCK
Rule 63    while_block -> WHILE ident EQUALS_COMP LIT_INTEGER BEGIN_BLOCK stmts END_BLOCK
Rule 64    while_block -> WHILE ident EQUALS_COMP LIT_FLOAT BEGIN_BLOCK stmts END_BLOCK
Rule 65    for_block -> FOR ident IN LIT_INTEGER D_DOT LIT_INTEGER BEGIN_BLOCK stmts END_BLOCK
Rule 66    if_block -> IF OPEN_PARANTHESIS ident operator LIT_INTEGER CLOSE_PARANTHESIS BEGIN_BLOCK stmts END_BLOCK
Rule 67    if_block -> IF OPEN_PARANTHESIS ident operator EQUALS_COMP LIT_FLOAT CLOSE_PARANTHESIS BEGIN_BLOCK stmts END_BLOCK
Rule 68    operator -> EQUALS_COMP
Rule 69    operator -> GREATER_EQUAL_OP
Rule 70    operator -> LESS_EQUAL_OP
Rule 71    operator -> LESS_THAN
Rule 72    operator -> GREATER_THAN
Rule 73    operator -> LESSEQUAL
Rule 74    operator -> NOTEQUAL
Rule 75    operator -> OR_OP
Rule 76    operator -> AND_OP
Rule 77    if_else_block -> if_block ELSE BEGIN_BLOCK stmts END_BLOCK
Rule 78    else_if_block -> if_block ELSE if_block ELSE BEGIN_BLOCK stmts END_BLOCK
Rule 79    unsafe_block -> UNSAFE BEGIN_BLOCK stmts END_BLOCK
Rule 80    match_block -> MATCH ident BEGIN_BLOCK match_stmt END_BLOCK
Rule 81    match_stmt -> non_block_stmt mat non_block_stmt
Rule 82    match_stmt -> LIT_INTEGER mat non_block_stmt
Rule 83    struct_block -> STRUCT ident BEGIN_BLOCK struct_stmt END_BLOCK
Rule 84    struct_stmt -> ident COLON i32

Terminals, with rules where they appear

ABSTRACT             : 
ALIGNOF              : 
AND_LOGICAL          : 40
AND_OP               : 76
ARROW                : 
AS                   : 
ASSIGNMENT_OP        : 13 14 15 16 17 18 19 20 21 22 29 37
BECOME               : 
BEGIN_BLOCK          : 4 5 6 7 8 59 60 61 62 63 64 65 66 67 77 78 79 80 83
BOX                  : 
BREAK                : 
CLOSE_BRACKET        : 
CLOSE_PARANTHESIS    : 4 5 6 7 8 23 46 47 66 67
COLON                : 84
COMMA                : 49
CONST                : 
CONTINUE             : 
CRATE                : 
DIVISION             : 35
DO                   : 
DOT                  : 
D_COLON              : 
D_DOT                : 65
ELSE                 : 77 78 78
END_BLOCK            : 4 5 6 7 8 59 60 61 62 63 64 65 66 67 77 78 79 80 83
ENUM                 : 
EQUALS_COMP          : 63 64 67 68
EXTERN               : 
FALSE                : 18 22 61
FINAL                : 
FN                   : 4 5 6 7 8
FOR                  : 65
GREATER_EQUAL_OP     : 69
GREATER_THAN         : 72
IF                   : 66 67
IMPL                 : 
IN                   : 65
LEFT_SHIFT           : 44
LESSEQUAL            : 73
LESS_EQUAL_OP        : 70
LESS_THAN            : 71
LET                  : 13 14 15 16 17 18 19 20 21 22
LIT_FLOAT            : 15 20 64 67
LIT_INTEGER          : 14 16 19 63 65 65 66 82
LOOP                 : 59
MACRO                : 
MAIN_FUN             : 4
MATCH                : 80
MINUS                : 16 33
MOD                  : 
MODULUS              : 36
MOVE                 : 
MULTIPLICATION       : 34
MUT                  : 19 20 21 22
NOTEQUAL             : 74
NOT_OP               : 43
OFFSETOF             : 
OPEN_BRACKET         : 
OPEN_PARANTHESIS     : 4 5 6 7 8 23 46 47 66 67
OR_LOGICAL           : 41
OR_OP                : 75
OVERRIDE             : 
PLUS                 : 32
PRINT                : 23 28
PRIV                 : 
PROC                 : 
PUB                  : 
PURE                 : 
REF                  : 
RETURN               : 
RIGHT_SHIFT          : 45
SELFTYPE             : 
SELFVALUE            : 
SEMICOLON            : 13 14 15 16 17 18 19 20 21 22 23 28 29 37 46 47
SENTENCE             : 13 23
SHEBANG_LINE         : 
SIZEOF               : 
STATIC               : 
STRING               : 
STRUCT               : 83
SUPER                : 
TRAIT                : 
TRUE                 : 17 21 60
TYPE                 : 
TYPEOF               : 
UNSAFE               : 79
UNSIZED              : 
USE                  : 
VIRTUAL              : 
WHERE                : 
WHILE                : 60 61 62 63 64
XOR_OP               : 42
YIELD                : 
error                : 
i32                  : 84
ident                : 5 6 7 8 13 14 15 16 17 18 19 20 21 22 28 29 30 31 37 38 39 46 47 48 49 62 63 64 65 66 67 80 83 84
mat                  : 81 82

Nonterminals, with rules where they appear

ProgramFile          : 1
arguments            : 5 7 46 49
arith_op             : 31
b_expr               : 37 39
binop                : 24
bit_op               : 39
bitop                : 25
block_stmt           : 11 12
compilation_unit     : 0
else_if_block        : 55
expr                 : 29 31
fn_call              : 26
for_block            : 52
fun_def              : 2 7 8
if_block             : 53 77 78 78
if_else_block        : 54
loop_block           : 50
main_fun             : 2 3
match_block          : 57
match_stmt           : 80
non_block_stmt       : 9 10 81 81 82
operator             : 66 67
print_ident          : 27
stmts                : 4 5 6 7 8 10 12 59 60 61 62 63 64 65 66 67 77 78 79
struct_block         : 58
struct_stmt          : 83
unsafe_block         : 56
while_block          : 51

Parsing method: LALR

state 0

    (0) S' -> . compilation_unit
    (1) compilation_unit -> . ProgramFile
    (2) ProgramFile -> . fun_def main_fun
    (3) ProgramFile -> . main_fun
    (5) fun_def -> . FN ident OPEN_PARANTHESIS arguments CLOSE_PARANTHESIS BEGIN_BLOCK stmts END_BLOCK
    (6) fun_def -> . FN ident OPEN_PARANTHESIS CLOSE_PARANTHESIS BEGIN_BLOCK stmts END_BLOCK
    (7) fun_def -> . fun_def FN ident OPEN_PARANTHESIS arguments CLOSE_PARANTHESIS BEGIN_BLOCK stmts END_BLOCK
    (8) fun_def -> . fun_def FN ident OPEN_PARANTHESIS CLOSE_PARANTHESIS BEGIN_BLOCK stmts END_BLOCK
    (4) main_fun -> . FN MAIN_FUN OPEN_PARANTHESIS CLOSE_PARANTHESIS BEGIN_BLOCK stmts END_BLOCK

    FN              shift and go to state 5

    ProgramFile                    shift and go to state 1
    fun_def                        shift and go to state 2
    compilation_unit               shift and go to state 3
    main_fun                       shift and go to state 4

state 1

    (1) compilation_unit -> ProgramFile .

    $end            reduce using rule 1 (compilation_unit -> ProgramFile .)


state 2

    (2) ProgramFile -> fun_def . main_fun
    (7) fun_def -> fun_def . FN ident OPEN_PARANTHESIS arguments CLOSE_PARANTHESIS BEGIN_BLOCK stmts END_BLOCK
    (8) fun_def -> fun_def . FN ident OPEN_PARANTHESIS CLOSE_PARANTHESIS BEGIN_BLOCK stmts END_BLOCK
    (4) main_fun -> . FN MAIN_FUN OPEN_PARANTHESIS CLOSE_PARANTHESIS BEGIN_BLOCK stmts END_BLOCK

    FN              shift and go to state 7

    main_fun                       shift and go to state 6

state 3

    (0) S' -> compilation_unit .



state 4

    (3) ProgramFile -> main_fun .

    $end            reduce using rule 3 (ProgramFile -> main_fun .)


state 5

    (5) fun_def -> FN . ident OPEN_PARANTHESIS arguments CLOSE_PARANTHESIS BEGIN_BLOCK stmts END_BLOCK
    (6) fun_def -> FN . ident OPEN_PARANTHESIS CLOSE_PARANTHESIS BEGIN_BLOCK stmts END_BLOCK
    (4) main_fun -> FN . MAIN_FUN OPEN_PARANTHESIS CLOSE_PARANTHESIS BEGIN_BLOCK stmts END_BLOCK

    ident           shift and go to state 8
    MAIN_FUN        shift and go to state 9


state 6

    (2) ProgramFile -> fun_def main_fun .

    $end            reduce using rule 2 (ProgramFile -> fun_def main_fun .)


state 7

    (7) fun_def -> fun_def FN . ident OPEN_PARANTHESIS arguments CLOSE_PARANTHESIS BEGIN_BLOCK stmts END_BLOCK
    (8) fun_def -> fun_def FN . ident OPEN_PARANTHESIS CLOSE_PARANTHESIS BEGIN_BLOCK stmts END_BLOCK
    (4) main_fun -> FN . MAIN_FUN OPEN_PARANTHESIS CLOSE_PARANTHESIS BEGIN_BLOCK stmts END_BLOCK

    ident           shift and go to state 10
    MAIN_FUN        shift and go to state 9


state 8

    (5) fun_def -> FN ident . OPEN_PARANTHESIS arguments CLOSE_PARANTHESIS BEGIN_BLOCK stmts END_BLOCK
    (6) fun_def -> FN ident . OPEN_PARANTHESIS CLOSE_PARANTHESIS BEGIN_BLOCK stmts END_BLOCK

    OPEN_PARANTHESIS shift and go to state 11


state 9

    (4) main_fun -> FN MAIN_FUN . OPEN_PARANTHESIS CLOSE_PARANTHESIS BEGIN_BLOCK stmts END_BLOCK

    OPEN_PARANTHESIS shift and go to state 12


state 10

    (7) fun_def -> fun_def FN ident . OPEN_PARANTHESIS arguments CLOSE_PARANTHESIS BEGIN_BLOCK stmts END_BLOCK
    (8) fun_def -> fun_def FN ident . OPEN_PARANTHESIS CLOSE_PARANTHESIS BEGIN_BLOCK stmts END_BLOCK

    OPEN_PARANTHESIS shift and go to state 13


state 11

    (5) fun_def -> FN ident OPEN_PARANTHESIS . arguments CLOSE_PARANTHESIS BEGIN_BLOCK stmts END_BLOCK
    (6) fun_def -> FN ident OPEN_PARANTHESIS . CLOSE_PARANTHESIS BEGIN_BLOCK stmts END_BLOCK
    (48) arguments -> . ident
    (49) arguments -> . ident COMMA arguments

    CLOSE_PARANTHESIS shift and go to state 15
    ident           shift and go to state 14

    arguments                      shift and go to state 16

state 12

    (4) main_fun -> FN MAIN_FUN OPEN_PARANTHESIS . CLOSE_PARANTHESIS BEGIN_BLOCK stmts END_BLOCK

    CLOSE_PARANTHESIS shift and go to state 17


state 13

    (7) fun_def -> fun_def FN ident OPEN_PARANTHESIS . arguments CLOSE_PARANTHESIS BEGIN_BLOCK stmts END_BLOCK
    (8) fun_def -> fun_def FN ident OPEN_PARANTHESIS . CLOSE_PARANTHESIS BEGIN_BLOCK stmts END_BLOCK
    (48) arguments -> . ident
    (49) arguments -> . ident COMMA arguments

    CLOSE_PARANTHESIS shift and go to state 18
    ident           shift and go to state 14

    arguments                      shift and go to state 19

state 14

    (48) arguments -> ident .
    (49) arguments -> ident . COMMA arguments

    CLOSE_PARANTHESIS reduce using rule 48 (arguments -> ident .)
    COMMA           shift and go to state 20


state 15

    (6) fun_def -> FN ident OPEN_PARANTHESIS CLOSE_PARANTHESIS . BEGIN_BLOCK stmts END_BLOCK

    BEGIN_BLOCK     shift and go to state 21


state 16

    (5) fun_def -> FN ident OPEN_PARANTHESIS arguments . CLOSE_PARANTHESIS BEGIN_BLOCK stmts END_BLOCK

    CLOSE_PARANTHESIS shift and go to state 22


state 17

    (4) main_fun -> FN MAIN_FUN OPEN_PARANTHESIS CLOSE_PARANTHESIS . BEGIN_BLOCK stmts END_BLOCK

    BEGIN_BLOCK     shift and go to state 23


state 18

    (8) fun_def -> fun_def FN ident OPEN_PARANTHESIS CLOSE_PARANTHESIS . BEGIN_BLOCK stmts END_BLOCK

    BEGIN_BLOCK     shift and go to state 24


state 19

    (7) fun_def -> fun_def FN ident OPEN_PARANTHESIS arguments . CLOSE_PARANTHESIS BEGIN_BLOCK stmts END_BLOCK

    CLOSE_PARANTHESIS shift and go to state 25


state 20

    (49) arguments -> ident COMMA . arguments
    (48) arguments -> . ident
    (49) arguments -> . ident COMMA arguments

    ident           shift and go to state 14

    arguments                      shift and go to state 26

state 21

    (6) fun_def -> FN ident OPEN_PARANTHESIS CLOSE_PARANTHESIS BEGIN_BLOCK . stmts END_BLOCK
    (9) stmts -> . non_block_stmt
    (10) stmts -> . non_block_stmt stmts
    (11) stmts -> . block_stmt
    (12) stmts -> . block_stmt stmts
    (13) non_block_stmt -> . LET ident ASSIGNMENT_OP SENTENCE SEMICOLON
    (14) non_block_stmt -> . LET ident ASSIGNMENT_OP LIT_INTEGER SEMICOLON
    (15) non_block_stmt -> . LET ident ASSIGNMENT_OP LIT_FLOAT SEMICOLON
    (16) non_block_stmt -> . LET ident ASSIGNMENT_OP MINUS LIT_INTEGER SEMICOLON
    (17) non_block_stmt -> . LET ident ASSIGNMENT_OP TRUE SEMICOLON
    (18) non_block_stmt -> . LET ident ASSIGNMENT_OP FALSE SEMICOLON
    (19) non_block_stmt -> . LET MUT ident ASSIGNMENT_OP LIT_INTEGER SEMICOLON
    (20) non_block_stmt -> . LET MUT ident ASSIGNMENT_OP LIT_FLOAT SEMICOLON
    (21) non_block_stmt -> . LET MUT ident ASSIGNMENT_OP TRUE SEMICOLON
    (22) non_block_stmt -> . LET MUT ident ASSIGNMENT_OP FALSE SEMICOLON
    (23) non_block_stmt -> . PRINT OPEN_PARANTHESIS SENTENCE CLOSE_PARANTHESIS SEMICOLON
    (24) non_block_stmt -> . binop
    (25) non_block_stmt -> . bitop
    (26) non_block_stmt -> . fn_call
    (27) non_block_stmt -> . print_ident
    (50) block_stmt -> . loop_block
    (51) block_stmt -> . while_block
    (52) block_stmt -> . for_block
    (53) block_stmt -> . if_block
    (54) block_stmt -> . if_else_block
    (55) block_stmt -> . else_if_block
    (56) block_stmt -> . unsafe_block
    (57) block_stmt -> . match_block
    (58) block_stmt -> . struct_block
    (29) binop -> . ident ASSIGNMENT_OP expr SEMICOLON
    (37) bitop -> . ident ASSIGNMENT_OP b_expr SEMICOLON
    (46) fn_call -> . ident OPEN_PARANTHESIS arguments CLOSE_PARANTHESIS SEMICOLON
    (47) fn_call -> . ident OPEN_PARANTHESIS CLOSE_PARANTHESIS SEMICOLON
    (28) print_ident -> . PRINT ident SEMICOLON
    (59) loop_block -> . LOOP BEGIN_BLOCK stmts END_BLOCK
    (60) while_block -> . WHILE TRUE BEGIN_BLOCK stmts END_BLOCK
    (61) while_block -> . WHILE FALSE BEGIN_BLOCK stmts END_BLOCK
    (62) while_block -> . WHILE ident BEGIN_BLOCK stmts END_BLOCK
    (63) while_block -> . WHILE ident EQUALS_COMP LIT_INTEGER BEGIN_BLOCK stmts END_BLOCK
    (64) while_block -> . WHILE ident EQUALS_COMP LIT_FLOAT BEGIN_BLOCK stmts END_BLOCK
    (65) for_block -> . FOR ident IN LIT_INTEGER D_DOT LIT_INTEGER BEGIN_BLOCK stmts END_BLOCK
    (66) if_block -> . IF OPEN_PARANTHESIS ident operator LIT_INTEGER CLOSE_PARANTHESIS BEGIN_BLOCK stmts END_BLOCK
    (67) if_block -> . IF OPEN_PARANTHESIS ident operator EQUALS_COMP LIT_FLOAT CLOSE_PARANTHESIS BEGIN_BLOCK stmts END_BLOCK
    (77) if_else_block -> . if_block ELSE BEGIN_BLOCK stmts END_BLOCK
    (78) else_if_block -> . if_block ELSE if_block ELSE BEGIN_BLOCK stmts END_BLOCK
    (79) unsafe_block -> . UNSAFE BEGIN_BLOCK stmts END_BLOCK
    (80) match_block -> . MATCH ident BEGIN_BLOCK match_stmt END_BLOCK
    (83) struct_block -> . STRUCT ident BEGIN_BLOCK struct_stmt END_BLOCK

    LET             shift and go to state 50
    PRINT           shift and go to state 32
    ident           shift and go to state 46
    LOOP            shift and go to state 52
    WHILE           shift and go to state 30
    FOR             shift and go to state 42
    IF              shift and go to state 44
    UNSAFE          shift and go to state 29
    MATCH           shift and go to state 35
    STRUCT          shift and go to state 41

    struct_block                   shift and go to state 28
    for_block                      shift and go to state 27
    unsafe_block                   shift and go to state 40
    non_block_stmt                 shift and go to state 48
    bitop                          shift and go to state 33
    fn_call                        shift and go to state 34
    stmts                          shift and go to state 36
    else_if_block                  shift and go to state 38
    block_stmt                     shift and go to state 39
    binop                          shift and go to state 37
    loop_block                     shift and go to state 43
    if_else_block                  shift and go to state 45
    if_block                       shift and go to state 47
    while_block                    shift and go to state 49
    match_block                    shift and go to state 51
    print_ident                    shift and go to state 31

state 22

    (5) fun_def -> FN ident OPEN_PARANTHESIS arguments CLOSE_PARANTHESIS . BEGIN_BLOCK stmts END_BLOCK

    BEGIN_BLOCK     shift and go to state 53


state 23
